# ditzybooru

./: .editorconfig  .gitignore  .prettierignore  .prettierrc.yml  AGENTS.md  Cargo.toml  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  typos.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/src/: lib.rs
frontend/: components.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  wrangler.jsonc
frontend/scripts/: strip-css-layers.mjs  vite-plugin-legacy-css.mjs
frontend/src/: global.css  main.tsx  prototypeComponents.module.css  router.tsx
frontend/src/components/: CardHeader.tsx  ImageCard.tsx  MostRecent.tsx
frontend/src/components/home/: ActivitySidebar.tsx  FeaturedImage.tsx  ForumActivityBlock.tsx  ImageGrid.tsx  ImageList.tsx  LiveStreamsBlock.tsx  MediaBox.tsx  MediaGrid.tsx  MediaThumb.tsx  Pagination.tsx  RecentCommentsBlock.tsx  SidebarBlock.tsx  StreamsBlock.tsx  TrendingImages.tsx  UserAttribution.tsx  WatchedImages.tsx
frontend/src/components/layout/: HeaderNav.tsx  MobileMenu.tsx  SiteFooter.tsx  SiteHeader.tsx  ThemeColorSwitcher.tsx  ThemeLightnessToggle.tsx
frontend/src/components/ui/: HeaderButton.tsx  avatar.tsx  badge.tsx  button.tsx  input.tsx  int.tsx
frontend/src/hooks/: useImageInteraction.ts
frontend/src/lib/: format.ts  theme.ts  types.ts  utils.ts
frontend/src/routes/: __root.tsx  index.tsx
frontend/src/utils/: assertions.ts
scripts/install/: lib.sh  ovhcloud.sh  typos.sh
scripts/utils/: lib.sh
(+2 files in other folders)
