[package]
name = "backend"

edition    = { workspace = true }
license    = { workspace = true }
publish    = false
repository = { workspace = true }
version    = { workspace = true }

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
axum   = "0.8.9"
tokio  = { version = "1.0", features = ["rt-multi-thread", "macros"] }
